# dice-web

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
services/backend/: .env  Cargo.toml
services/backend/src/: main.rs
services/frontend/: index.html  package.json
services/frontend/src/: Settings.ts  index.tsx
services/frontend/src/App/: App.module.css  App.tsx
services/frontend/src/Dice/: Dice.module.css  Dice.tsx  IDice.interface.ts
services/frontend/src/Seed/: ISeed.ts  Seed.module.css  Seed.tsx
services/frontend/src/ValueInput/: IValue.interface.ts  ValueInput.module.css  ValueInput.tsx
src/: main.rs
