[package]
name = "dice-api"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
derive_more = "0.99.17"
env_logger = "0.9.1"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
