[package]
name = "dice-api"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.2.1"
derive_more = "0.99.17"
env_logger = "0.9.1"
hex = "0.4.3"
log = "0.4.17"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
