[package]
name = "dice-api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.9"
actix-web = "4.12.1"
derive_more = "2.1.1"
dotenvy = "0.15.7"
env_logger = "0.11.8"
hex = "0.4.3"
log = "0.4.29"
rand = "0.9.2"
rand_chacha = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = "0.3.45"
